# booklib

./: Cargo.toml  README.md
src/: arguments_provider.rs  command.rs  command_api.rs  command_factory.rs  library_entry.rs  list_output_handler.rs  main.rs  repository.rs
src/arguments_provider/: cli.rs  request.rs
src/command/: add.rs  list.rs
src/repository/: library_entries_repository.rs
