[package]
name = "booklib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.8", features = ["cargo"] }
derive = "1.0.0"
phf = "0.11.2"
rocket = "=0.5.0-rc.3"
strum = "0.25.0"
strum_macros = "0.25.1"